# RAGX-Advanced-Retrieval-and-Generation-Engine

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  git_commit_all.sh  pyproject.toml  render.yaml  requirements.txt  test_run.py
.github/workflows/: python-app.yml  python-package.yml
deployment/: Dockerfile  docker-compose.yml  prometheus.yml
deployment/grafana/dashboards/: ragx_dashboard.json
deployment/k8s/: deployment.yaml  service.yaml
ragx/: __init__.py
ragx/api/: __init__.py  dependencies.py  main.py  middleware.py  schemas.py
ragx/api/routes/: __init__.py  admin.py  feedback.py  ingest.py  query.py
ragx/api/static/: app.js  index.html  style.css
ragx/config/: __init__.py  logging_config.py  settings.py
ragx/embeddings/: __init__.py  pipeline.py
ragx/embeddings/chunking/: __init__.py  recursive_splitter.py  semantic_chunker.py
ragx/embeddings/models/: __init__.py  bge_embeddings.py  openai_embeddings.py  sentence_transformer.py
ragx/embeddings/vectorstore/: __init__.py  base.py  chroma_store.py  faiss_store.py
ragx/evaluation/: __init__.py  deepeval_eval.py  metrics.py  ragas_eval.py  report.py
ragx/generation/: __init__.py  citations.py  memory.py  pipeline.py
ragx/generation/llm/: __init__.py  anthropic_llm.py  base.py  gemini_llm.py  llama_llm.py  openai_llm.py
ragx/generation/prompts/: __init__.py  templates.py
ragx/ingestion/: __init__.py  metadata.py  pipeline.py  preprocessor.py
ragx/ingestion/loaders/: __init__.py  base.py  csv_loader.py  docx_loader.py  markdown_loader.py  pdf_loader.py  txt_loader.py  web_loader.py
ragx/monitoring/: __init__.py  logger.py  prometheus_metrics.py
ragx/retrieval/: __init__.py  engine.py  metrics.py
ragx/retrieval/reranking/: __init__.py  cohere_rerank.py  cross_encoder.py
ragx/retrieval/search/: __init__.py  bm25.py  hybrid.py  similarity.py
ragx/retrieval/strategies/: __init__.py  compression.py  multi_query.py  parent_child.py
tests/test_embeddings/: test_embeddings.py
tests/test_generation/: test_generation.py
tests/test_ingestion/: test_ingestion.py
tests/test_retrieval/: test_retrieval.py
