[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragx"
version = "1.0.0"
description = "RAGX — Advanced Retrieval and Generation Engine. A production-grade RAG platform."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RAGX Team"}
]
keywords = ["rag", "retrieval", "generation", "llm", "ai", "nlp", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core LangChain
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-experimental",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Document Processing
    "pypdf>=4.0",
    "python-docx>=1.0",
    "beautifulsoup4>=4.12",
    "pandas>=2.0",
    "requests>=2.31",
    "chardet>=5.0",
    "tqdm>=4.66",

    # Embeddings & Vector Stores
    "langchain-openai>=1.2.2",
    "langchain-huggingface",
    "langchain-chroma",
    "faiss-cpu>=1.14.0",
    "sentence-transformers>=5.5.1",
    "chromadb>=1.5.9",

    # Retrieval
    "rank-bm25>=0.2.2",
    "nltk>=3.8",
    "langchain-cohere",

    # Generation
    "langchain-anthropic>=1.4.3",
    "langchain-google-genai>=4.2.3",
    "langchain-ollama>=1.1.0",

    # Evaluation
    "ragas>=0.4.3",
    "deepeval>=4.0.3",

    # API & Deployment
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "gunicorn>=22.0",
    "python-multipart>=0.0.9",

    # Monitoring & Logging
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
ragx = "ragx.api.main:run"

[tool.setuptools.packages.find]
include = ["ragx*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
